Sitio adaptado para pantallas grandes

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño y Desarrollo Web - Diego F. Reyes</title>
+    <title>Diego F. Reyes | Desarrollador Web Front-end y Back-end</title>
     <link rel="stylesheet" href="./build/css/app.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 </head>
@@ -18,28 +18,30 @@
                 </div>
                 <ul class="navbar__menu">
                     <li><a href="./">Inicio</a></li>
-                    <li><a href="#servicios">Servicios</a></li>
+                    <li><a href="#sobremi">Sobre mi</a></li>
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="#portafolio">Portafolio</a></li>
-                    <li><a href="#sobremi">Sobre mi</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </div>     
         </nav>
         <div class="container">
-           <h2 class="header__title">Desarrollador Web <br>Front-end y Back-end</h2>
-           <p class="header__description"><span class="font-blue">[</span> 'Hobbie'<span class="font-blue">,</span> 'Pasión'<span class="font-blue">,</span> 'Vida' <span class="font-blue">]</span></p> 
+          <div class="header__info">
+                <h2 class="header__title">Desarrollador Web<br>Front-end y Back-end</h2>
+          </div>
         </div>
     </header>
     <article id="sobremi" class="section about-me bg-dark-blue">
         <div class="container">
            <header class="section__header">
-               <h2 class="section__title">Hola!</h2>
+               <h2 class="section__title">Hola! Soy Diego</h2>
+               <span class="section__description">@diferrev</span>
            </header>
             <div class="row">
                 <div class="col-sm-6">
                     <p class="about-me__history">
-                        Mi nombre es Diego F. Reyes.<br> Soy desarrollador web front-end y back-end, futuro tecnológo en análisis y desarrollo de sistemas de información y un bronza en ascenso en League of Legends. 
+                        Desarrollador web front-end y back-end, futuro tecnológo en desarrollo de software y un bronza en ascenso en League of Legends.<br>
+                        Me encanta estar sumergido en el mundo de la creación de sitios y soluciones web tanto en su parte visual como también jugar con los engranajes del lado del servidor.
                     </p>
                     <ul class="social-media social-media--about-me">
                         <li class="social-media__link">
@@ -60,7 +62,8 @@
     <article id="habilidades" class="section skill bg-verydark-blue">
         <div class="container">
            <header class="section__header">
-               <h2 class="section__title">Técnicas y afinidades</h2>
+               <h2 class="section__title">Habilidades</h2>
+               <span class="section__description">Cada segundo, minuto, hora o día es una oportunidad para mejorar un poco más</span>
            </header>
             <ul class="skill__list">
                 <li class="skill__box">
@@ -110,22 +113,12 @@
            </header>
            <ul class="portfolio__list">
                <li class="portfolio__item">
-                   <img class="portfolio__item__thumb" src="./build/images/portfolio-one.jpg"/>
-                   <h3 class="portfolio__item__client">Gane Centro</h3>
-                   <p class="portfolio__item__title">Portal Interno</p>
-               </li>
-               <li class="portfolio__item">
-                   <img class="portfolio__item__thumb" src="./build/images/portfolio-two.jpg"/>
-                   <h3 class="portfolio__item__client">Gane Centro</h3>
-                   <p class="portfolio__item__title">Tablero de resultados</p>
-               </li>
-               <li class="portfolio__item">
-                   <img class="portfolio__item__thumb" src="./build/images/portfolio-three.jpg"/>
-                   <h3 class="portfolio__item__client">Fitness Cross International</h3>
+                   <img class="portfolio__item__thumb" src="./build/images/fitnesscrossint.jpg"/>
+                   <h3 class="portfolio__item__client">Fitness Cross Int.</h3>
                    <p class="portfolio__item__title">Sitio Web</p>
                </li>
                <li class="portfolio__item">
-                   <img class="portfolio__item__thumb" src="./build/images/portfolio-four.jpg"/>
+                   <img class="portfolio__item__thumb" src="./build/images/saintsandsinners.jpg"/>
                    <h3 class="portfolio__item__client">Saint's and Sinner's</h3>
                    <p class="portfolio__item__title">Sitio Web - Demo</p>
                </li>
